--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="libraries/p5.dom.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
     <script src="obstacle.js"></script>
+    <script src="ball.js"></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="CSS/style.css">
   </head>
